--- a/src/routes/Contact/_contact.css
+++ b/src/routes/Contact/_contact.css
@@ -106,6 +106,10 @@
   cursor: pointer;
 }
 
+.contact-card-img-close:hover {
+  cursor: pointer;
+}
+
 .contact-full-screen-close-button {
   z-index: 600;
   top: 0;
@@ -178,13 +182,13 @@
   }
 
   .contact-card-body-CTA {
-    margin: 20px 0;
+    margin: 20px auto;
   }
 
-  /* -------------------- contact card styles for img FullScreen open ---------------*/
+  /* -------------------- handle FullScreen ---------------*/
 
   .contact-card-img-close {
-    border-radius: 12px;
+    border-radius: 16px;
   }
 
   .contact-full-screen-close-button button {
@@ -199,16 +203,13 @@
 @media (min-width: 1181px) {
   .contact-root {
     width: 80%;
-    height: min-content;
     margin: 0 auto;
   }
 
   .contact-content {
-    height: 100%;
     width: 100%;
     margin-top: 10%;
     margin-bottom: 10%;
-    display: flex;
     flex-direction: row-reverse;
     align-items: center;
     justify-content: space-between;
@@ -223,23 +224,14 @@
     width: 55%;
     padding-top: 0%;
     gap: 30px;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
   }
 
   .contact-copy h2 {
     font-size: 46px;
-    text-align: left;
-    font-weight: 700;
-    animation: opacity-translation-Y-in 0.7s cubic-bezier(0.48, 0.23, 0.61, 0.93);
   }
 
   .contact-copy p {
     font-size: 20px;
-    font-weight: normal;
-    text-align: justify;
-    animation: opacity-translation-Y-in 0.8s cubic-bezier(0.48, 0.23, 0.61, 0.93);
   }
 
   .contact-CTA {
@@ -249,108 +241,36 @@
     width: 100%;
     gap: 20px;
     margin-top: 5%;
-    animation: opacity-in 0.4s cubic-bezier(0.48, 0.23, 0.61, 0.93);
-    animation-delay: 1s;
-    animation-fill-mode: backwards;
   }
 
   .contact-cards {
-    display: flex;
-    flex-direction: column;
     margin: 0 auto;
-    width: 80%;
+    width: 70%;
     margin-bottom: 10%;
   }
 
   .contact-card-body {
-    width: 100%;
-    padding: 40px;
+    padding: 50px;
     gap: 30px;
-    height: fit-content;
-    box-sizing: border-box;
-    display: flex;
-    flex-direction: column;
   }
 
   .contact-card-body h4 {
     font-size: 28px;
-    text-align: center;
-    font-weight: 700;
-    width: 100%;
   }
 
   .contact-card-body-CTA {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    margin: 20px auto;
-    gap: 20px;
+    margin: 30px auto;
   }
 
-  /* -------------------- handle FullScreen open ---------------*/
+  /* -------------------- handle FullScreen ---------------*/
 
-  .contact-full-screen-asset-open {
-    width: 100vw;
-    height: 100vh;
-    top: 0;
-    left: 0px;
-    z-index: 550;
-    position: fixed;
-    display: flex;
-    flex-direction: column;
-  }
-
-  .contact-full-screen-asset-open:hover {
-    cursor: pointer;
-  }
-
-  .contact-card-img-close:hover {
-    cursor: pointer;
-  }
-
-  .contact-full-screen-asset-open .contact-full-screen-asset-button {
-    z-index: 2;
-    top: 0;
-    right: 0;
-    position: absolute;
-  }
-
-  .contact-full-screen-asset-open .contact-card-body-asset {
-    width: 100%;
-    height: 100%;
-    z-index: 1;
-    position: absolute;
-    object-fit: contain;
-  }
-
-  .contact-full-screen-asset-open .contact-full-screen-bg {
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    z-index: 0;
-    position: absolute;
-    background-color: black;
-  }
-
-  /* ------- full screen img FullScreen closed  ------ */
-
-  .contact-full-screen-asset-close {
-    display: default;
-  }
-  .contact-full-screen-asset-close:hover {
-    cursor: pointer;
-  }
-  .contact-full-screen-asset-close .contact-full-screen-asset-button {
-    display: none;
-  }
-  .contact-full-screen-asset-close .contact-card-body-asset {
-    width: 100%;
-    height: 100%;
-    object-fit: contain;
+  .contact-card-img-close {
     border-radius: 18px;
   }
-  .contact-full-screen-asset-close .contact-full-screen-bg {
-    display: none;
+
+  .contact-full-screen-close-button button {
+    padding: 30px;
+    min-width: 0;
+    font-size: 40px;
   }
 }
