--- a/src/components/Email-InputForm/_inputForm.css
+++ b/src/components/Email-InputForm/_inputForm.css
@@ -115,7 +115,7 @@
 }
 
 .email-pop-up-content img:hover {
-  transform: rotate(10deg) scale(1.1);
+  transform: scale(1.05);
 }
 
 .email-pop-up-content span {
@@ -240,10 +240,6 @@
     transition: all 0.4s cubic-bezier(0.5, 0.27, 0.45, 0.87);
   }
 
-  .email-pop-up-content img:hover {
-    transform: rotate(10deg) scale(1.1);
-  }
-
   .email-pop-up-content span {
     margin: 20px auto;
   }
@@ -330,37 +326,24 @@
   /* -----------------------  pop-up styles ------------  */
 
   .email-pop-up-content {
-    position: relative;
     height: 350px;
     width: 500px;
     border-radius: 18px;
     z-index: 1;
-    gap: 10px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    border: 1px solid var(--mainColor);
-    background-color: var(--secColor);
+    gap: 0px;
+    border: 2px solid var(--mainColor);
   }
 
   .email-pop-up-content h2 {
-    font-size: 34px;
+    font-size: 30px;
   }
 
   .email-pop-up-content img {
-    width: 120px;
-    margin: 20px auto;
-    object-fit: contain;
-    animation: scale-opacity-in 0.7s cubic-bezier(0.5, 0.27, 0.45, 0.87);
-    transition: all 0.4s cubic-bezier(0.5, 0.27, 0.45, 0.87);
-  }
-
-  .email-pop-up-content img:hover {
-    transform: rotate(10deg) scale(1.1);
+    width: 130px;
+    margin: 30px auto;
   }
 
   .email-pop-up-content span {
-    margin: 20px auto;
+    margin: 15px auto;
   }
 }
