--- a/src/routes/Contact/_contact.css
+++ b/src/routes/Contact/_contact.css
@@ -133,7 +133,66 @@
   background-color: black;
 }
 
-/* --------------------------------------------------------------------- Tablet media query -----------------------------------------------------------------------*/
+/* -----------------------  pop-up styles ------------  */
+
+.email-pop-up-root {
+  z-index: 1000;
+  height: 100vh;
+  width: 100vw;
+  top: 0;
+  left: 0;
+  position: fixed;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.email-pop-up-content {
+  position: relative;
+  height: 350px;
+  width: 300px;
+  border-radius: 12px;
+  z-index: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid var(--mainColor);
+  background-color: var(--secColor);
+}
+
+.email-pop-up-content h2 {
+  font-size: 24px;
+}
+
+.email-pop-up-content img {
+  height: 150px;
+  margin: 30px auto;
+  object-fit: contain;
+  animation: scale-opacity-in 0.7s cubic-bezier(0.5, 0.27, 0.45, 0.87);
+  transition: all 0.2s cubic-bezier(0.5, 0.27, 0.45, 0.87);
+}
+
+.email-pop-up-content img:hover {
+  transform: scale(1.05);
+}
+
+.email-pop-up-content span {
+  margin: 10px auto;
+}
+
+.email-pop-up-background {
+  position: fixed;
+  background-color: var(--secColor);
+  z-index: 0;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  width: 100vw;
+  opacity: 0.9;
+}
+
+/* -------------------------------------------- Tablet media query -----------------------------------------------------------------------*/
 
 @media (min-width: 601px) {
   .contact-root {
@@ -196,9 +255,31 @@
     min-width: 0;
     font-size: 40px;
   }
+
+  /* -----------------------  pop-up styles ------------  */
+
+  .email-pop-up-content {
+    height: 450px;
+    width: 400px;
+    border-radius: 16px;
+    border: 2px solid var(--mainColor);
+  }
+
+  .email-pop-up-content h2 {
+    font-size: 28px;
+  }
+
+  .email-pop-up-content img {
+    height: 220px;
+    margin: 35px auto;
+  }
+
+  .email-pop-up-content span {
+    margin: 13px auto;
+  }
 }
 
-/* --------------------------------------------------------------------- Desktop media query -----------------------------------------------------------------------*/
+/* ------------------------------------------- Desktop media query -----------------------------------------------------------------------*/
 
 @media (min-width: 1181px) {
   .contact-root {
@@ -271,5 +352,27 @@
     padding: 30px;
     min-width: 0;
     font-size: 40px;
+  }
+
+  /* -----------------------  pop-up styles ------------  */
+
+  .email-pop-up-content {
+    height: 500px;
+    width: 500px;
+    border-radius: 18px;
+    border: 2px solid var(--mainColor);
+  }
+
+  .email-pop-up-content h2 {
+    font-size: 30px;
+  }
+
+  .email-pop-up-content img {
+    height: 250px;
+    margin: 40px auto;
+  }
+
+  .email-pop-up-content span {
+    margin: 15px auto;
   }
 }
