FIXED hover problme with full screen assets and card hover effects

--- a/src/components/DemoCard/_demoCard.css
+++ b/src/components/DemoCard/_demoCard.css
@@ -33,7 +33,9 @@
 }
 
 .card-root-idle:hover {
-  pointer-events: none;
+  scale: none;
+  opacity: none;
+  box-shadow: none;
 }
 
 .card-headline {
