updated web projects page css - removed duplicated code lines for desktop media query

--- a/src/routes/LandingPage/_landingPage.css
+++ b/src/routes/LandingPage/_landingPage.css
@@ -4,7 +4,6 @@
 }
 
 .landingPage-content {
-  height: 100%;
   width: 100%;
   margin-top: 20%;
   margin-bottom: 20%;
@@ -47,10 +46,7 @@
 }
 
 .landingPage-CTA {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-end;
-  gap: 10px;
+  margin-left: auto;
   margin-top: 10%;
   animation: opacity-in 0.4s cubic-bezier(0.48, 0.23, 0.61, 0.93);
   animation-delay: 1s;
@@ -87,7 +83,6 @@
   }
 
   .landingPage-CTA {
-    gap: 20px;
     margin-top: 10%;
   }
 }
@@ -127,8 +122,8 @@
   }
 
   .landingPage-CTA {
-    align-items: flex-start;
-    gap: 20px;
+    width: 100%;
     margin-top: 5%;
+    margin-right: auto;
   }
 }
