--- a/src/routes/motionProjects/_motionProjects.css
+++ b/src/routes/motionProjects/_motionProjects.css
@@ -4,7 +4,6 @@
 }
 
 .motion-projects-content {
-  height: 100%;
   width: 100%;
   margin-top: 20%;
   margin-bottom: 20%;
@@ -59,6 +58,7 @@
   width: 100%;
   gap: 10px;
   margin-bottom: 20%;
+  margin: 0 auto;
 }
 
 .motion-projects-cards hr {
@@ -139,6 +139,7 @@
   width: 100%;
   height: 150px;
   border: 3px dotted var(--mainColor);
+  margin: 0 auto;
   color: var(--mainColor);
   display: flex;
   justify-content: center;
@@ -229,7 +230,6 @@
   }
 
   .motion-projects-CTA {
-    gap: 20px;
     margin-top: 10%;
   }
 
@@ -318,16 +318,11 @@
 @media (min-width: 1181px) {
   .motion-projects-root {
     width: 80%;
-    height: min-content;
-    margin: 0 auto;
   }
 
   .motion-projects-content {
-    height: 100%;
-    width: 100%;
     margin-top: 10%;
     margin-bottom: 10%;
-    display: flex;
     flex-direction: row-reverse;
     align-items: center;
     justify-content: space-between;
@@ -342,67 +337,39 @@
     width: 55%;
     padding-top: 0%;
     gap: 30px;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
   }
 
   .motion-projects-copy h2 {
     font-size: 46px;
-    text-align: left;
-    font-weight: 700;
-    animation: opacity-translation-Y-in 0.7s cubic-bezier(0.48, 0.23, 0.61, 0.93);
   }
   .motion-projects-copy p {
     font-size: 20px;
-    font-weight: normal;
-    text-align: justify;
-    animation: opacity-translation-Y-in 0.8s cubic-bezier(0.48, 0.23, 0.61, 0.93);
   }
 
   .motion-projects-CTA {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
     width: 100%;
-    gap: 20px;
     margin-top: 5%;
-    animation: opacity-in 0.4s cubic-bezier(0.48, 0.23, 0.61, 0.93);
-    animation-delay: 1s;
-    animation-fill-mode: backwards;
+    margin-right: auto;
   }
 
   .motion-projects-cards {
-    display: flex;
-    flex-direction: column;
-    margin: 0 auto;
     width: 70%;
     margin-bottom: 10%;
   }
 
   .motion-projects-cards hr {
     width: 90%;
-    border-radius: 100%;
     margin: 20px auto;
   }
 
   .motion-projects-card-body {
-    width: 100%;
     padding: 40px;
     gap: 30px;
-    height: fit-content;
-    box-sizing: border-box;
-    display: flex;
-    flex-direction: column;
   }
 
   .motion-projects-card-body h2 {
     font-size: 46px;
-    text-align: center;
-    font-weight: 700;
-    width: 100%;
     padding: 30px 0;
-    text-decoration: underline;
   }
 
   .motion-projects-card-body i {
@@ -411,56 +378,33 @@
 
   .motion-projects-card-body h4 {
     font-size: 28px;
-    text-align: left;
-    font-weight: 700;
-    width: 100%;
   }
 
   .motion-projects-card-body p {
-    text-align: justify;
     font-size: 16px;
-    width: 100%;
   }
 
   .motion-projects-card-body ul {
-    text-align: left;
-    width: 100%;
     padding-left: 50px;
-    box-sizing: border-box;
   }
 
   .motion-projects-card-body li {
     width: 100%;
-    height: min-content;
-    text-align: left;
-    position: relative;
-    box-sizing: border-box;
   }
 
   .motion-projects-card-body li > img {
     height: 16px;
-    object-fit: contain;
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
   }
 
   .motion-projects-card-bodys-CTA {
-    display: flex;
     flex-direction: row;
-    align-items: center;
     margin: 20px auto;
     gap: 20px;
   }
 
   .motion-projects-card-asset-loader {
-    width: 100%;
     height: 450px;
     border: 3px dotted var(--mainColor);
-    color: var(--mainColor);
-    display: flex;
-    justify-content: center;
-    align-items: center;
   }
 
   .motion-projects-card-body-video {
