--- a/src/routes/AboutMe/_aboutMe.css
+++ b/src/routes/AboutMe/_aboutMe.css
@@ -168,7 +168,6 @@
   }
 
   .aboutMe-CTA {
-    gap: 20px;
     margin-top: 10%;
   }
 
@@ -259,7 +258,7 @@
   }
 
   .aboutMe-CTA {
-    align-items: flex-start;
+    margin-right: auto;
     width: 100%;
     margin-top: 5%;
   }
@@ -311,7 +310,7 @@
 
   .about-me-body-asset {
     border-radius: 18px;
-    width: 60%;
+    width: 70%;
   }
 
   .about-me-body-asset:hover {
