--- a/src/components/NavBar/_NavBar.css
+++ b/src/components/NavBar/_NavBar.css
@@ -17,6 +17,11 @@
   transform: translateY(-50%);
 }
 
+.mobile-nav-bar-content button {
+  min-width: 0;
+  padding: 0;
+}
+
 .isActive {
   color: var(--textMainColor);
   font-size: 20px;
